--- a/ArticleManager/src/main/java/hr/algebra/view/ImageDropFrame.form
+++ b/ArticleManager/src/main/java/hr/algebra/view/ImageDropFrame.form
@@ -20,9 +20,10 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
-              <Component id="lblDestination" min="-2" pref="988" max="-2" attributes="0"/>
+              <Component id="lblDestination" min="-2" pref="951" max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
